corrections to readme

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ name = "easigrow"
 version = "0.0.0"
 description = "A fatigue crack growth matching program"
 license = "MIT"
-authors = ["Paul White @needsglasses"]
+authors = ["Paul White <paul.white.melb@gmail.com>"]
 readme = "README.md"
 documentation = "README"
 publish = false
